--- a/angular.json
+++ b/angular.json
@@ -32,6 +32,7 @@
               }
             ],
             "styles": [
+              "node_modules/aos/dist/aos.css",
               "src/styles.scss",
               "node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css"
             ],
@@ -92,6 +93,7 @@
               }
             ],
             "styles": [
+              "node_modules/aos/dist/aos.css",
               "src/styles.scss",
               "node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css"
             ],
