--- a/package.json
+++ b/package.json
@@ -10,16 +10,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^19.2.16",
-    "@angular/cdk": "^19.2.19",
-    "@angular/common": "^19.2.0",
-    "@angular/compiler": "^19.2.0",
-    "@angular/core": "^19.2.0",
-    "@angular/forms": "^19.2.0",
-    "@angular/material": "^19.2.19",
-    "@angular/platform-browser": "^19.2.0",
-    "@angular/platform-browser-dynamic": "^19.2.0",
-    "@angular/router": "^19.2.0",
+    "@angular/animations": "~19.2.17",
+    "@angular/cdk": "~19.2.17",
+    "@angular/common": "~19.2.17",
+    "@angular/compiler": "~19.2.17",
+    "@angular/core": "~19.2.17",
+    "@angular/forms": "~19.2.17",
+    "@angular/material": "~19.2.17",
+    "@angular/platform-browser": "~19.2.17",
+    "@angular/platform-browser-dynamic": "~19.2.17",
+    "@angular/router": "~19.2.17",
     "aos": "^3.0.0-beta.6",
     "chart.js": "^4.5.1",
     "jwt-decode": "^4.0.0",
@@ -28,9 +28,9 @@
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.2.11",
-    "@angular/cli": "^19.2.11",
-    "@angular/compiler-cli": "^19.2.0",
+    "@angular-devkit/build-angular": "~19.2.17",
+    "@angular/cli": "~19.2.17",
+    "@angular/compiler-cli": "~19.2.17",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.6.0",
     "karma": "~6.4.0",
